--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script
+      src="https://kit.fontawesome.com/3240d88c70.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
